Fixed text wrap for Job postings and Added TODO components for Pending Verification Page

--- a/client/src/components/styling/JobListings.css
+++ b/client/src/components/styling/JobListings.css
@@ -17,10 +17,10 @@
 #title {
   position: relative;
   height: 29px;
-  width: 155px;
+  width: 208px;
   left: 17px;
-  top: 0px;
-  border-radius: nullpx;
+  top: 0;
+  border-radius: 0;
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
@@ -34,8 +34,8 @@
   height: 15px;
   width: 97px;
   left: 17px;
-  top: 0px;
-  border-radius: nullpx;
+  top: 0;
+  border-radius: 0;
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
@@ -53,7 +53,7 @@
   mix-blend-mode: normal;
   border: 1px solid #000000;
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
 }
 
@@ -66,12 +66,12 @@
   height: 88px;
   width: 223px;
   left: 9px;
-  top: 0px;
-  border-radius: 0px;
+  top: 0;
+  border-radius: 0;
 }
 
 .details {
-  border-radius: nullpx;
+  border-radius: 0;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
